--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@ code {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.field {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
